--- a/src/components/UI/Calender/style.css
+++ b/src/components/UI/Calender/style.css
@@ -1,3 +1,14 @@
-.css-qct7wd-MuiButtonBase-root-MuiPickersDay-root.Mui-selected{
+.rs-calendar-panel .rs-calendar-table-cell-is-today .rs-calendar-table-cell-day{
     background-color: green !important;
+}
+
+.rs-badge-independent {
+    background-color: #ffafca !important;
+}
+
+.rs-calendar-panel .rs-calendar-table-cell-selected .rs-calendar-table-cell-content {
+  
+    box-shadow: inset 0 0 0 1px green !important;
+   
+
 }
