--- a/src/components/UI/Calender/style.css
+++ b/src/components/UI/Calender/style.css
@@ -1,14 +1,15 @@
 .rs-calendar-panel .rs-calendar-table-cell-is-today .rs-calendar-table-cell-day{
-    background-color: green !important;
+    background-color: transparent !important;
+    color: black;
 }
 
 .rs-badge-independent {
-    background-color: #ffafca !important;
+    background-color: green !important;
 }
 
 .rs-calendar-panel .rs-calendar-table-cell-selected .rs-calendar-table-cell-content {
   
-    box-shadow: inset 0 0 0 1px green !important;
-   
+    /* box-shadow: inset 0 0 0 1px green !important; */
+   box-shadow: none !important;
 
 }
