--- a/src/pages/Destinations/DestinationForm/DestinationForm.css
+++ b/src/pages/Destinations/DestinationForm/DestinationForm.css
@@ -70,7 +70,7 @@
 
 .form-body input:focus,
 .form-body textarea:focus {
-    border-color: #007bff;
+    border-color: #00aa6c;
 }
 
 textarea {
@@ -79,7 +79,7 @@ textarea {
 }
 
 button.btn-primary {
-    background-color: #007bff;
+    background-color: #00aa6c;
     color: white;
     border: none;
     padding: 0.625rem;
@@ -89,7 +89,7 @@ button.btn-primary {
 }
 
 button.btn-primary:hover {
-    background-color: #0056b3;
+    background-color: #007248;
 }
 
 @media (max-width: 576px) {
